--- a/res/layout/tweet_item.xml
+++ b/res/layout/tweet_item.xml
@@ -9,21 +9,43 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:src="@drawable/ic_launcher" />
+    
+      <TextView
+        android:id="@+id/tvName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toRightOf="@+id/ivProfileImage"
+        android:layout_alignParentTop="true"
+        android:textSize="12sp"
+        android:text="@string/name_label" />
+
+    <TextView
+        android:id="@+id/tvTimeStamp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_toRightOf="@+id/tvUserName"
+        android:textSize="12sp"
+        android:gravity="right"
+        android:text="@string/time_stamp_label" />
 
     <TextView
         android:id="@+id/tvUserName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_toRightOf="@+id/ivProfileImage"
+         android:layout_toRightOf="@+id/tvName"
+         android:textSize="12sp"
         android:text="@string/foo_label" />
 
     <TextView
         android:id="@+id/tvBody"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/tvUserName"
-        android:layout_below="@+id/tvUserName"
-        android:text="This is the tweet body" />
+        android:layout_below="@+id/tvName"
+        android:layout_toRightOf="@+id/ivProfileImage"
+        android:text="@string/body_label" />
+
+  
 
 </RelativeLayout>
